# qwen-hack-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  SUBMISSION.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml
alembic/: env.py
alembic/versions/: 2026_07_20_0139-4389bc0326e9_create_catalog_tables.py  2026_07_20_0222-4754265ac29b_media_paths_many_to_one.py
deploy/: deploy-prod.sh  nginx.conf
docs/: architecture.md  demo.md  deploy.md  devpost.md  hackathon.md  impact.md  market-landscape.md  profiling.md  qwen-usage.md  verification.md
packs/: brand_rules.yaml  short_drama.yaml
scripts/: check_oss.py  mcp_agent_demo.py  probe_edit_models.py  probe_models.py  profile_demo.py  qwen_tool_demo.py  seed_catalog.py  smoke_vl.py  verify_quota.py  warm_fixtures.py
server/: __init__.py  agent_plan.py  app.py  assemble.py  budget.py  catalog.py  catalog_api.py  compiler.py  config.py  demo.py  fixtures.py  mcp_agent.py  mcp_server.py  metrics.py  oss.py  patch.py  pipeline.py  qwen_tools.py  repair.py  report.py  script.py  specs.py  store.py  tier0.py  tier_a.py  tier_b.py  tts.py  wan.py
server/db/: __init__.py  models.py
tests/: test_agent_plan.py  test_app.py  test_catalog.py  test_compiler.py  test_config.py  test_demo_runtime.py  test_fixtures.py  test_mcp.py  test_mcp_agent.py  test_metrics.py  test_pack.py  test_patch.py  test_pipeline.py  test_qwen_tools.py  test_repair_assemble.py  test_report.py  test_script.py  test_specs.py  test_store.py  test_tier0.py  test_tier_a.py  test_tier_b.py  test_tts.py  test_vocabulary_coverage.py  test_wan.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.fixtures.config.ts  vite.config.ts
web/e2e/: demo-flow.spec.ts  patch-button.spec.ts
web/e2e-fixtures/: shots.spec.ts
web/src/: AgentPrompt.tsx  App.tsx  PipelineGraph.tsx  api.ts  charts.tsx  components.tsx  graph.ts  main.tsx  nodes.tsx  styles.css  theme.ts  types.ts  vocabulary.ts
