[project]
name = "dailies"
version = "0.1.0"
description = "CI for AI-generated video — per-shot conformance testing (Tier-0 stills → Tier-A CV → Tier-B VLM) with budget-bounded auto-repair, on Qwen Cloud (Wan)."
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "openai>=1.50",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "alembic>=1.14",
    "sqlalchemy>=2.0",       # alembic's engine layer only — the app itself stays on raw psycopg
    "alibabacloud-oss-v2>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
mcp = [
    "mcp>=1.0",
]
agent = [
    "qwen-agent[mcp]>=0.0.34",
    "soundfile>=0.12",       # qwen-agent imports it eagerly but does not declare it
    "python-dateutil>=2.8",  # same — pulled in by qwen-agent's code-interpreter tool
]

[project.scripts]
# Runnable as a package: `uvx --from '.[mcp]' dailies-mcp` (or `pipx run --spec '.[mcp]'
# dailies-mcp`) starts the MCP server over stdio. The [mcp] extra is required, not optional
# garnish — mcp_server.py imports the `mcp` package at module scope, so `--from .` alone
# resolves the entry point and then dies on the import. Not published to PyPI — this is the
# productization surface made installable, not a claim of distribution.
dailies-mcp = "server.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
